--- a/Protocol.c.ini
+++ b/Protocol.c.ini
@@ -1,8 +1,8 @@
 [Position]
-Line=254
-Column=74
+Line=209
+Column=64
 [FoldedLines]
-Count=11
+Count=12
 Line0=35
 Line1=40
 Line2=47
@@ -14,3 +14,4 @@ Line7=163
 Line8=234
 Line9=346
 Line10=363
+Line11=387
